--- a/views/includes/_scripts.jade
+++ b/views/includes/_scripts.jade
@@ -1,8 +1,11 @@
-script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js')
-script(src='http://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js')
+script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js')
+script(src='//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js')
 
 if env === 'development'
   script
+    //- //- Because I don't have Internet Connection at my house rn
+    //- include:js scripts/jquery.js
+    //- include:js scripts/lodash.js
     include:js scripts/phaser.js
   script(src="#{cdn}javascripts/_app.js")
 else
