no styles, need to work out some bugs

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,6 +6,9 @@ block header
 block content
   .container
     #game
+    p Click to start / replay
+    p Player Left:  WASD to move, Q for gun up, E for gun down, F to shoot
+    p Player Right: IJKL to move, O for gun up, U for gun down, H to shoot
 
 
 
