--- a/views/includes/_scripts.jade
+++ b/views/includes/_scripts.jade
@@ -1,5 +1,5 @@
-script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js')
-script(src='//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js')
+script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js')
+script(src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js')
 
 if env === 'development'
   script
@@ -9,7 +9,7 @@ if env === 'development'
     include:js scripts/phaser.js
   script(src="#{cdn}javascripts/_app.js")
 else
-  script(src='//cdnjs.cloudflare.com/ajax/libs/phaser/2.4.2/phaser.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/phaser/2.4.2/phaser.min.js')
   script(src="#{cdn}javascripts/_app.min.js")
 
 
